Add POST method tester

--- a/src/index.html
+++ b/src/index.html
@@ -5,15 +5,19 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Trello</title>
+  <title>Help desk</title>
 </head>
 
 <body>
-  <div class="board">
-    <div class="list-container" data-list-name="Сделать" data-local-storage-key="TODO"></div>
-    <div class="list-container" data-list-name="В работе" data-local-storage-key="INPROGRESS"></div>
-    <div class="list-container" data-list-name="Сделано" data-local-storage-key="DONE"></div>
-  </div>
+  <form>
+    Name:<br>
+    <input type="text" name="name" value="Do it!">
+    <br>
+    Description:<br>
+    <input type="text" name="description" value="Just do it!">
+    <br><br>
+    <input type="submit">
+  </form>
 </body>
 
 </html>
